changed url for renders provided url

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ PGHOST='ep-patient-term-aax1sva7-pooler.westus3.azure.neon.tech'
 PGDATABASE='neondb'
 
 DATABASE_URL=postgresql://neondb_owner:npg_NCq1Apw6PUeM@ep-patient-term-aax1sva7-pooler.westus3.azure.neon.tech/neondb?sslmode=require
+FRONTEND_URL=http://nfl-stats-1.onrender.com 
